--- a/localization/bul/achievements.json
+++ b/localization/bul/achievements.json
@@ -1,133 +1,133 @@
 {
   "AchievementGrid": {
     "NAMES": [
-      "Ерунда",
-      "Очищение",
-      "Налетай",
+      "Отбий номера",
+      "Непорочност",
+      "Ела ми",
       "Пакт",
       "Адреналин",
-      "Могущество",
-      "Накачаться",
-      "Непробиваемость",
-      "Баррикада",
+      "Могъщество",
+      "Напомпай",
+      "Непроницаем",
+      "Барикадиран",
       "Катализатор",
       "Чума",
-      "Ниндзя",
-      "Бесконечность",
-      "Ты — ничтожество",
-      "Идеально",
-      "Страж",
-      "Призрак",
-      "Босс",
-      "Автоматон",
-      "Коллекционер",
-      "Чемпион",
-      "Ворон",
-      "Фигуры",
-      "Пожиратель времени",
+      "Нинджа",
+      "Безкрайност",
+      "Ти си нищо",
+      "Съвършенство",
+      "Пазителят",
+      "Призракът",
+      "Шефът",
+      "Автоматонът",
+      "Колекционерът",
+      "Шампионът",
+      "Гарванът",
+      "Фигурите",
+      "Времеядът",
       "Рубин",
       "Изумруд",
-      "Скрыто",
-      "Кому сдались эти реликвии?",
-      "Быстрый скалолаз",
-      "Возвышение 0",
-      "Возвышение 10",
+      "Скрито",
+      "Кому са нужни реликви?",
+      "Бърз катерач",
+      "Възвишаване 0",
+      "Възвишаване 10",
       "Минималист",
-      "Ммм, пончик!",
+      "Ммм, поничка!",
       "Сапфир",
-      "Обычное дело",
-      "Фокусировка",
-      "Неон",
-      "Энергия не нужна",
-      "Сегодня мой день",
-      "Преходящий",
-      "Возвышение 20",
+      "Здрав разум",
+      "Фокусиран",
+      "Неонов",
+      "Енергията е надценена",
+      "Щастливият ми ден",
+      "Приходящият",
+      "Възвишаване 20",
       "Рубин+",
       "Изумруд+",
       "Сапфир+",
-      "Конец?",
-      "Увековеченный",
+      "Това краят ли е?",
+      "Увековечен",
       "Аметист",
       "Аметист+"
     ],
     "TEXT": [
-      "Выиграть бой, оставшись с 1 ОЗ.",
-      "Не более 3 карт в руке, стопке добора и стопке сброса вместе взятых.",
-      "Выиграть бой, не используя карт Атаки.",
-      "Сжечь 20 карт за один бой.",
-      "9 Энергии в одном ходу боя.",
-      "Не менее 10 положительных эффектов в одном бою.",
-      "Не менее 50 Силы в одном бою.",
-      "Не менее 99 Защиты в одном бою.",
-      "999 Защиты в одном бою.",
-      "Наложить не менее 99 Яда на одного врага.",
-      "Победить 3 врагов Ядом в одном бою.",
-      "Разыграть 10 Заточек в одном ходу.",
-      "Разыграть 25 карт в одном ходу.",
-      "Победить босса в первом ходу.",
-      "Победить босса, не получив урона.",
-      "Повержен Страж.",
-      "Повержен Гексадух.",
-      "Повержен Слизнебосс.",
-      "Повержен Бронзовый Автоматон.",
-      "Повержен Коллекционер.",
-      "Повержен Чемпион.",
-      "Повержен Пробуждённый.",
-      "Повержены Дону и Дека.",
-      "Повержен Пожиратель времени.",
-      "Пройти игру за Латоносца.",
-      "Пройти игру за Безмолвную.",
-      "Подробности этого достижения станут доступны после его открытия.",
-      "Пройти игру с одной реликвией.",
-      "Пройти игру менее чем за 20 минут.",
-      "Открыть режим Возвышения.",
-      "Пройти игру на 10-ом уровне Возвышения.",
-      "Пройти игру с колодой из 5 или менее карт.",
-      "Прикончить Дону картой «Поглотить».",
-      "Пройти игру за Дефекта.",
-      "Пройти игру с колодой, не содержащей Необычные или Редкие карты.",
-      "Не менее 25 Фокуса в одном бою.",
-      "Призвать 9 Сфер Плазмы в одном ходу.",
-      "Разыграть 10 карт с ценой 0 в одном ходу.",
-      "Победить в Ежедневной вылазке.",
-      "Победить Преходящего прежде, чем он исчезнет.",
-      "Пройти игру на 20-ом уровне Возвышения.",
-      "Пройти Эндшпиль за Латоносца.",
-      "Пройти Эндшпиль за Безмолвную.",
-      "Пройти Эндшпиль за Дефекта.",
-      "Пройти Эндшпиль за Латоносца, Безмолвную и Дефекта.",
-      "Получить все остальные Достижения.",
-      "Пройти игру за Созерцающую.",
-      "Пройти Эндшпиль за Созерцающую."
+      "Спечели битка на 1 живот.",
+      "3 или по-малко карти в ръката, тестето и тестето с изчистените карти общо.",
+      "Спечели битка, без да играеш карта Атака.",
+      "Изтощи 20 карти за една битка.",
+      "9 енергия за един ход.",
+      "10 или повече положителни ефекта за една битка.",
+      "50 или повече сила за една битка.",
+      "99 или повече Защита по време на битка.",
+      "999 Защита по време на битка.",
+      "99 или повече Отрова на един противник.",
+      "Победи 3 противника с Отрова за една битка.",
+      "Изиграй 10 Кинжала за един ход.",
+      "Изиграй 25 карти за един ход.",
+      "Победи бос за един ход.",
+      "Победи бос, без да получаваш щета.",
+      "Победи Пазителя.",
+      "Победи Шестоъгълния Призрак.",
+      "Победи Крал Слуз.",
+      "Победи Бронзовия Автоматон.",
+      "Победи Колекционерът.",
+      "Победи Шампиона.",
+      "Победи Пробудения.",
+      "Победи Понич и Декаедър.",
+      "Победи Времеядът.",
+      "Спечели играта с Железният.",
+      "Спечели играта с Безмълвната.",
+      "Подробности за това постижение ще са достъпни, когато се отключи.",
+      "Спечели играта само с една реликва.",
+      "Спечели играта за под 20 минути.",
+      "Отключи режим Възвишаване.",
+      "Спечели играта на Възвишаване ниво 10.",
+      "Спечели играта с 5 или по-малко карти.",
+      "Довърши Понич с карта \"Яж\".",
+      "Спечели играта с Дефектният.",
+      "Спечели играта с тесте без необикновени и редки карти.",
+      "25 или повече Фокус за една битка.",
+      "Зареди 9 Сфери Плазма за 1 ход.",
+      "Изиграй 10 или повече карти с цена 0 за един ход.",
+      "Спечели в Дневното Катерене.",
+      "Победи Приходящия преди да изчезне.",
+      "Изиграй играта на Възвишаване ниво 20.",
+      "Изиграй Епилога с Железният.",
+      "Изиграй Епилога с Безмълвната.",
+      "Изиграй Епилога с Дефектният.",
+      "Изиграй Епилога с Железният, Безмълвната и Дефектният.",
+      "Събери всички останали постижения.",
+      "Спечели играта с Наблюдателят.",
+      "Изиграй Епилога с Наблюдателят."
     ]
   },
   "CharStat": {
     "NAMES": [],
     "TEXT": [
-      "Общее время игры: ",
-      "Всего побед: #y",
-      "Всего смертей: #y",
-      "Всего уровней пройдено: #y",
-      "Всего боссов убито: #y",
-      "Всего врагов убито: #y",
+      "Общо време на игра: ",
+      "Общо победи: #y",
+      "Общо поражения: #y",
+      "Общо изкачени етажи: #y",
+      "Общо победени босове: #y",
+      "Общо победени врагове: #y",
       "",
-      "Карт найдено: #y",
-      "Карт открыто: #y",
-      "Реликвий найдено: #y",
-      "Реликвий открыто: #y",
-      "Наивысший уровень: #y",
-      "Лучшая Ежедневная вылазка: #y",
-      "Самая быстрая победа: ",
-      "Повержен ",
+      "Намерени карти: #y",
+      "Отключени карти: #y",
+      "Намерени реликви: #y",
+      "Отключени реликви: #y",
+      "Най-висок етаж: #y",
+      "Най-добър резултат от Дневно катерене: #y",
+      "Най-бърза победа: ",
+      "Победен ",
       ": #gДа NL ",
-      ": #rНет NL ",
-      "Побед: #y",
-      "Смертей: #y",
-      "Уровней пройдено: #y",
-      "Боссов убито: #y",
-      "Врагов убито: #y",
-      "Лучшая череда побед: #y",
-      "Лучший счёт: #y",
+      ": #rНе NL ",
+      "Победи: #y",
+      "Загуби: #y",
+      "Изкатерени етажи: #y",
+      "Победени босове: #y",
+      "Победени врагове: #y",
+      "Най-добра предица от победи: #y",
+      "Най-добър резултат: #y",
       "%02d:%02d:%02d",
       "%02d:%02d",
       "#y%02dч #y%02dм #y%02dс",
@@ -137,12 +137,12 @@
   },
   "StatsScreen": {
     "NAMES": [
-      "#yОбщая #yстатистика",
-      "#yДостижения",
-      "#rЛатоносец",
-      "#gБезмолвная",
-      "#bДефект",
-      "#pСозерцающая"
+      "#yОбща #yстатистика",
+      "#yПостижения",
+      "#rЖелезният",
+      "#gБезмълвната",
+      "#bДефектият",
+      "#pНаблюдателят"
     ],
     "TEXT": [
       "Назад"
@@ -150,10 +150,10 @@
   },
   "PS4Trophy": {
     "NAMES": [
-      "Увековеченный"
+      "Увековечен"
     ],
     "TEXT": [
-      "Получить все остальные Трофеи."
+      "Събери всички останали трофеи."
     ]
   }
 }
