--- a/localization/bul/keywords.json
+++ b/localization/bul/keywords.json
@@ -134,7 +134,7 @@
     },
     "PLASMA": {
       "NAMES": [
-        "Сфера Плазм"
+        "Сфера Плазма"
       ],
       "DESCRIPTION": "Сфера: Дава енергия."
     },
