--- a/localization/bul/run_mods.json
+++ b/localization/bul/run_mods.json
@@ -164,7 +164,7 @@
     "DESCRIPTION": "? rooms can now contain Elites but are also more likely to contain Treasure rooms."
   },
   "Daily Mods": {
-    "NAME": "Daily Mods",
+    "NAME": "Дневно катерене",
     "DESCRIPTION": "Embark on a run with exactly 3 random Daily Mods."
   },
   "The Ending": {
